BEGIN TRANSACTION;
CREATE TABLE IF NOT EXISTS "appointment" (
	"id"	INTEGER NOT NULL,
	"patient_id"	INTEGER NOT NULL,
	"place"	VARCHAR(255) NOT NULL,
	"date_at"	DATETIME NOT NULL,
	"type"	VARCHAR(255) NOT NULL,
	PRIMARY KEY("id" AUTOINCREMENT),
	CONSTRAINT "FK_FE38F8446B899279" FOREIGN KEY("patient_id") REFERENCES "patient"("id") NOT DEFERRABLE INITIALLY IMMEDIATE
);
CREATE TABLE IF NOT EXISTS "attendance" (
	"id"	INTEGER NOT NULL,
	"patient_id"	INTEGER NOT NULL,
	"check_in_at"	DATETIME NOT NULL,
	"check_out_at"	DATETIME DEFAULT NULL,
	"tag"	INTEGER NOT NULL,
	PRIMARY KEY("id" AUTOINCREMENT),
	CONSTRAINT "FK_6DE30D916B899279" FOREIGN KEY("patient_id") REFERENCES "patient"("id") NOT DEFERRABLE INITIALLY IMMEDIATE
);
CREATE TABLE IF NOT EXISTS "doctrine_migration_versions" (
	"version"	VARCHAR(191) NOT NULL,
	"executed_at"	DATETIME DEFAULT NULL,
	"execution_time"	INTEGER DEFAULT NULL,
	PRIMARY KEY("version")
);
CREATE TABLE IF NOT EXISTS "messenger_messages" (
	"id"	INTEGER NOT NULL,
	"body"	CLOB NOT NULL,
	"headers"	CLOB NOT NULL,
	"queue_name"	VARCHAR(190) NOT NULL,
	"created_at"	DATETIME NOT NULL,
	"available_at"	DATETIME NOT NULL,
	"delivered_at"	DATETIME DEFAULT NULL,
	PRIMARY KEY("id" AUTOINCREMENT)
);
CREATE TABLE IF NOT EXISTS "patient" (
	"id"	INTEGER NOT NULL,
	"file"	VARCHAR(12) NOT NULL,
	"name"	VARCHAR(255) NOT NULL,
	"disability"	BOOLEAN NOT NULL,
	PRIMARY KEY("id" AUTOINCREMENT)
);
CREATE TABLE IF NOT EXISTS "user" (
	"id"	INTEGER NOT NULL,
	"username"	VARCHAR(180) NOT NULL,
	"roles"	CLOB NOT NULL,
	"password"	VARCHAR(255) NOT NULL,
	"name"	VARCHAR(255) NOT NULL,
	PRIMARY KEY("id" AUTOINCREMENT)
);
CREATE TABLE IF NOT EXISTS "visitor" (
	"id"	INTEGER NOT NULL,
	"name"	VARCHAR(255) NOT NULL,
	"phone"	VARCHAR(255) DEFAULT NULL,
	"dni"	VARCHAR(255) NOT NULL,
	"tag"	INTEGER NOT NULL,
	"destination"	VARCHAR(255) NOT NULL,
	"check_in_at"	DATETIME NOT NULL,
	"check_out_at"	DATETIME DEFAULT NULL,
	"relationship"	VARCHAR(255) DEFAULT NULL,
	PRIMARY KEY("id" AUTOINCREMENT)
);
CREATE TABLE IF NOT EXISTS "visitor_patient" (
	"visitor_id"	INTEGER NOT NULL,
	"patient_id"	INTEGER NOT NULL,
	PRIMARY KEY("visitor_id","patient_id"),
	CONSTRAINT "FK_D8C947236B899279" FOREIGN KEY("patient_id") REFERENCES "patient"("id") ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE,
	CONSTRAINT "FK_D8C9472370BEE6D" FOREIGN KEY("visitor_id") REFERENCES "visitor"("id") ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE
);
CREATE INDEX IF NOT EXISTS "IDX_6DE30D916B899279" ON "attendance" (
	"patient_id"
);
CREATE INDEX IF NOT EXISTS "IDX_75EA56E016BA31DB" ON "messenger_messages" (
	"delivered_at"
);
CREATE INDEX IF NOT EXISTS "IDX_75EA56E0E3BD61CE" ON "messenger_messages" (
	"available_at"
);
CREATE INDEX IF NOT EXISTS "IDX_75EA56E0FB7336F0" ON "messenger_messages" (
	"queue_name"
);
CREATE INDEX IF NOT EXISTS "IDX_D8C947236B899279" ON "visitor_patient" (
	"patient_id"
);
CREATE INDEX IF NOT EXISTS "IDX_D8C9472370BEE6D" ON "visitor_patient" (
	"visitor_id"
);
CREATE INDEX IF NOT EXISTS "IDX_FE38F8446B899279" ON "appointment" (
	"patient_id"
);
CREATE UNIQUE INDEX IF NOT EXISTS "UNIQ_IDENTIFIER_USERNAME" ON "user" (
	"username"
);
COMMIT;
